--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,19 @@ body {
 	height: 100%;
 }
 
+input, button, ul, li {
+	all: unset;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .hidden {
-	display: none;
+	display: none !important;
 }
 
 .bg {
@@ -18,4 +29,161 @@ body {
 	height: 100%;
 	object-fit: cover;
 	z-index: -1;
+}
+
+.clock {
+	color: #ffffff;
+	font-size: 8vw;
+	height: 8vw;
+	line-height: 1;
+	text-align: center;
+	max-width: fit-content;
+	background-color: rgba(0, 0, 0, 0.45);
+	border-radius: 1.5vw;
+	padding: 2vw;
+	box-shadow: 0px 0px 2.7vw 0.3vw rgb(0 0 0 / 0.5);
+	backdrop-filter: blur(1px);
+	margin: 10vw 0 3vw;
+}
+
+.weather {
+	color: #ffffff;
+	font-size: 2vw;
+	line-height: 1;
+	text-align: center;
+	max-width: fit-content;
+	background-color: rgba(0, 0, 0, 0.45);
+	border-radius: 1.5vw;
+	padding: 2vw;
+	box-shadow: 0px 0px 2.7vw 0.3vw rgb(0 0 0 / 0.5);
+	backdrop-filter: blur(1px);
+	margin-bottom: 3vw;
+}
+
+.greeting {
+	display: flex;
+	margin-top: 0;
+	border:1px solid rgba(255, 255, 255, 0.3);
+	font-weight: 600;
+	font-size: 3vw;
+	color: #ffffff;
+	text-shadow: 0vw 0.3vw 0.3vw #000000;
+	padding: 1vw;
+	border-radius: 1.5vw;
+	background-color: rgba(255, 255, 255, 0.3);
+	backdrop-filter: blur(7px);
+	line-height: 1.5;
+}
+
+.quote {
+	border:1px solid rgba(255, 255, 255, 0.3);
+	min-width: 70vw;
+	max-width: 90vw;
+	display: flex;
+	flex-direction: column;
+	font-weight: 600;
+	color: #ffffff;
+	font-size: 3vw;
+	text-shadow: 0vw 0.3vw 0.3vw #000000;
+	padding: 1vw;
+	border-radius: 1.5vw;
+	background-color: rgba(255, 255, 255, 0.3);
+	backdrop-filter: blur(7px);
+	line-height: 1.5;
+	margin-top: auto;
+	margin-bottom: 2vw;
+}
+
+.quote span:last-child {
+	text-align: right;
+}
+
+.login-form {
+	display: flex;
+}
+
+.login-form input:first-child {
+	background: #ffffff;
+	font-size: 2vw;
+	height: 3vw;
+	padding: 1vw;
+}
+
+.login-form input:last-child {
+	background: #ffffff;
+	padding:1vw;
+	border-left:1px solid #000000;
+	cursor: pointer;
+}
+
+.todo-form input {
+	background: rgba(255, 255, 255, 0.3);
+	font-size: 2vw;
+	box-sizing: border-box;
+	height: 5vw;
+	padding: 1vw 2vw;
+	border-radius: 3vw;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	backdrop-filter: blur(7px);
+	color: #ffffff;
+}
+
+.todo-form input::placeholder {
+	color: #ffffff;
+}
+
+.todo-list {
+	display: flex;
+	color: #ffffff;
+	max-width: 90vw;
+	flex-wrap: wrap;
+	border: 1px solid #ffffff;
+	border-radius: 12px;
+	padding: 0 2vw 2vw;
+	margin-top: 2vw;
+	background-color: rgba(0, 0, 0, 0.45);
+	overflow: auto;
+	margin-bottom: 2vw;
+}
+
+.todo-list::-webkit-scrollbar {
+	display: none;
+}
+
+.todo-list li {
+	display: flex;
+	align-items: center;
+	list-style: none;
+	background: rgba(255, 255, 255, 0.3);
+	font-size: 2vw;
+	box-sizing: border-box;
+	height: 5vw;
+	padding: 1vw;
+	margin-right: 1vw;
+	margin-top: 2vw;
+	border-radius: 2vw;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	backdrop-filter: blur(7px);
+	color: #ffffff;
+	font-size: 1rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	-webkit-line-clamp: 1;
+}
+
+.todo-list li span {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
+}
+
+.material-icons {
+	height: 100%;
+	font-size: 2vw !important;
+	display: flex !important;
+	align-items: center !important;
+	margin-left: 2vw;
+	cursor: pointer;
 }
