--- a/css/style.css
+++ b/css/style.css
@@ -33,31 +33,31 @@ body {
 
 .clock {
 	color: #ffffff;
-	font-size: 8vw;
-	height: 8vw;
+	font-size: 60px;
+	height: 60px;
 	line-height: 1;
 	text-align: center;
 	max-width: fit-content;
 	background-color: rgba(0, 0, 0, 0.45);
-	border-radius: 1.5vw;
-	padding: 2vw;
-	box-shadow: 0px 0px 2.7vw 0.3vw rgb(0 0 0 / 0.5);
+	border-radius: 10px;
+	padding: 20px;
+	box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 0.5);
 	backdrop-filter: blur(1px);
-	margin: 10vw 0 3vw;
+	margin: 20px 0 15px;
 }
 
 .weather {
 	color: #ffffff;
-	font-size: 2vw;
+	font-size: 20px;
 	line-height: 1;
 	text-align: center;
 	max-width: fit-content;
 	background-color: rgba(0, 0, 0, 0.45);
-	border-radius: 1.5vw;
-	padding: 2vw;
-	box-shadow: 0px 0px 2.7vw 0.3vw rgb(0 0 0 / 0.5);
+	border-radius: 5px;
+	padding: 16px;
+	box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 0.5);
 	backdrop-filter: blur(1px);
-	margin-bottom: 3vw;
+	margin-bottom: 20px;
 }
 
 .greeting {
@@ -65,33 +65,33 @@ body {
 	margin-top: 0;
 	border:1px solid rgba(255, 255, 255, 0.3);
 	font-weight: 600;
-	font-size: 3vw;
+	font-size: 20px;
 	color: #ffffff;
-	text-shadow: 0vw 0.3vw 0.3vw #000000;
-	padding: 1vw;
-	border-radius: 1.5vw;
+	text-shadow: 0 1px 1px #000000;
+	padding: 10px;
+	border-radius: 5px;
 	background-color: rgba(255, 255, 255, 0.3);
 	backdrop-filter: blur(7px);
 	line-height: 1.5;
 }
 
 .quote {
-	border:1px solid rgba(255, 255, 255, 0.3);
-	min-width: 70vw;
-	max-width: 90vw;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	min-width: 70%;
+	max-width: 90%;
 	display: flex;
 	flex-direction: column;
 	font-weight: 600;
 	color: #ffffff;
-	font-size: 3vw;
-	text-shadow: 0vw 0.3vw 0.3vw #000000;
-	padding: 1vw;
-	border-radius: 1.5vw;
+	font-size: 24px;
+	text-shadow: 0 2px 2px #000000;
+	padding: 10px;
+	border-radius: 8px;
 	background-color: rgba(255, 255, 255, 0.3);
 	backdrop-filter: blur(7px);
 	line-height: 1.5;
 	margin-top: auto;
-	margin-bottom: 2vw;
+	margin-bottom: 20px;
 }
 
 .quote span:last-child {
@@ -100,31 +100,34 @@ body {
 
 .login-form {
 	display: flex;
+	align-items: center;
 }
 
 .login-form input:first-child {
 	background: #ffffff;
-	font-size: 2vw;
-	height: 3vw;
-	padding: 1vw;
+	font-size: 20px;
+	height: 20px;
+	padding: 10px;
 }
 
 .login-form input:last-child {
 	background: #ffffff;
-	padding:1vw;
 	border-left:1px solid #000000;
-	font-size: 2vw;
-    height: 3vw;
+	font-size: 20px;
+	height: 20px;
+	padding: 10px;
 	cursor: pointer;
 }
 
 .todo-form input {
+	display: block;
 	background: rgba(255, 255, 255, 0.3);
-	font-size: 2vw;
+	font-size: 16px;
 	box-sizing: border-box;
-	height: 5vw;
-	padding: 1vw 2vw;
-	border-radius: 3vw;
+	width: 264px;
+	height: 40px;
+	padding: 10px 20px;
+	border-radius: 20px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	backdrop-filter: blur(7px);
 	color: #ffffff;
@@ -137,15 +140,15 @@ body {
 .todo-list {
 	display: flex;
 	color: #ffffff;
-	max-width: 90vw;
+	max-width: 90%;
 	flex-wrap: wrap;
 	border: 1px solid #ffffff;
 	border-radius: 12px;
-	padding: 0 2vw 2vw;
-	margin-top: 2vw;
+	padding: 0 10px 10px;
+	margin-top: 10px;
 	background-color: rgba(0, 0, 0, 0.45);
 	overflow: auto;
-	margin-bottom: 2vw;
+	margin-bottom: 10px;
 }
 
 .todo-list:empty {
@@ -161,17 +164,14 @@ body {
 	align-items: center;
 	list-style: none;
 	background: rgba(255, 255, 255, 0.3);
-	font-size: 2vw;
 	box-sizing: border-box;
-	height: 5vw;
-	padding: 1vw;
-	margin-right: 1vw;
-	margin-top: 2vw;
-	border-radius: 2vw;
+	padding: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	border-radius: 10px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	backdrop-filter: blur(7px);
 	color: #ffffff;
-	font-size: 1rem;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -187,9 +187,9 @@ body {
 
 .material-icons {
 	height: 100%;
-	font-size: 2vw !important;
+	font-size: 1rem !important;
 	display: flex !important;
 	align-items: center !important;
-	margin-left: 2vw;
+	margin-left: 10px;
 	cursor: pointer;
 }
